--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -56,7 +56,7 @@
 
     .nav_menu {
       a {
-        font-size: 12px;
+        font-size: 13px;
       }
 
       ul {
