--- a/src/pages/Details/Details.scss
+++ b/src/pages/Details/Details.scss
@@ -77,6 +77,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 10px;
 
     .box {
@@ -91,10 +92,10 @@
     }
 
     .tag {
-      font-size: 14px;
+      font-size: 13px;
       font-weight: 700;
       color: white;
-      // white-space: nowrap;
+      white-space: nowrap;
     }
   }
 
@@ -138,7 +139,13 @@
 
   .collapse-content {
     width: 100%;
-    max-width: 579px; // Même largeur que .collapse
+    padding: 25px 28px 25px 20px;
+  }
+
+  //Gestion de l'affichage du contenu de la collapse
+  .collapse-text {
+    height: 100%;
+    overflow: auto;
   }
 
   .arrow {
@@ -152,12 +159,9 @@
   }
 
   .appear {
-    height: 150px;
+    height: 180px;
     max-height: 300px; // Ajuste selon le contenu
     background-color: $background-primary; // Fond gris quand visible
-    padding-top: 22px;
-    padding-left: 22px;
-    padding: 22px;
     box-sizing: border-box;
   }
 }
@@ -228,7 +232,8 @@
     .tags {
       margin-bottom: 16px;
       .box {
-        width: 100px;
+        width: 100%;
+        max-width: 105px;
         height: 18px;
         border-radius: 5px;
       }
@@ -245,6 +250,7 @@
 
       .collapse {
         height: 30px;
+        border-radius: 5px;
 
         h3 {
           font-size: 13px;
@@ -254,6 +260,26 @@
       .collapse-box {
         gap: 20px;
       }
+
+      .collapse-content {
+        max-width: 582px;
+        padding: 13px 20px 19px 20px;
+      }
+
+      .appear {
+        height: 150px;
+      }
+
+      //Gestion de l'affichage du contenu de la collapse
+      .collapse-text {
+        font-size: 13px;
+      }
     }
+  }
+}
+
+@media (min-width: 320px) and (max-width: 360px) {
+  .details-container {
+    padding-top: 20px;
   }
 }
